Added service to estimate the ride distance and price considering different times and pricing rules
